--- a/package.json
+++ b/package.json
@@ -10,44 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.2",
-    "@reduxjs/toolkit": "^2.0.1",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.15",
     "animate.css": "^4.1.1",
-    "antd": "^5.12.7",
-    "apexcharts": "^3.45.1",
-    "axios": "^1.6.4",
-    "formik": "^2.4.5",
-    "localforage": "^1.10.0",
-    "match-sorter": "^6.3.1",
-    "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
-    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
-    "react-redux": "^9.0.4",
-    "react-router-dom": "^6.21.0",
-    "react-slick": "^0.30.2",
-    "react-toastify": "^9.1.3",
-    "react-typed": "^2.0.12",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "2.4.2",
-    "slick-carousel": "^1.8.1",
-    "sort-by": "^1.2.0",
-    "yup": "^1.3.3"
+    "react-icons": "^5.1.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.2",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
-    "vite": "^5.0.8"
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "vite": "^5.2.0"
   }
 }
