--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@mui/material": "^5.15.15",
     "animate.css": "^4.1.1",
     "antd": "^5.16.4",
+    "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
     "react-typed": "^2.0.12"
   },
   "devDependencies": {
