--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "animate.css": "^4.1.1",
     "antd": "^5.16.4",
     "axios": "^1.7.2",
+    "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
-    "react-typed": "^2.0.12"
+    "react-typed": "^2.0.12",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
